# haiyajan-menu

./: .editorconfig  .gitignore  CMakeLists.txt  CMakePresets.json  Makefile  Makefile.switch  README.md  build_win.bat  codeql-analysis.yml  index.html  lgtm.yml  sonar-project.properties  vcpkg.json
.github/workflows/: analysis.yml  build.yml  c-cpp.yml  codeql-analysis.yml  devskim-analysis.yml  flawfinder-analysis.yml  msbuild.yml  pages-webgl.yml  release.yml
ext/: README.md  SDL2-2.0.12-VC.cab
ext/MSVC/: haiyajan-menu.sln  haiyajan-menu.vcxproj  haiyajan-menu.vcxproj.filters
inc/: all.h  cache.h  font.h  menu.h  stb_arr.h  stretchy_buffer.h  ui.h  win_dirent.h  wyhash.h  xxhash.h
inc/fonts/: NotoSansDisplay-Regular-Latin.h  NotoSansDisplay-Regular-Latin.ttf.h  NotoSansDisplay-SemiCondensedLight-Latin.h  NotoSansDisplay-SemiCondensedLight-Latin.ttf.h  fabric-icons.h  fabric-icons.ttf.h
meta/: emscripten_shell.html  winres.rc
src/: DESIGN.md  cache.c  font.c  main.c  menu.c  ui.c
src/t1ha/: t1ha_bits.h  t1ha_selfcheck.h
test/: test.c
test/example_dir/: README.txt
test/example_dir/Games/GB/: README.md  libbet.gb
test/example_dir/Games/GBC/: README.md
test/example_dir/Music/: Paul Pitman - Moonlight Sonata Op. 27 No. 2 - II. Allegretto.opus
webgl/: haiyajan-menu.html  haiyajan-menu.js  haiyajan-menu.wasm  index.html
